--- a/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj
+++ b/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj
@@ -29,8 +29,8 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|Win32'" Label="QtSettings">
-    <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;gui;widgets</QtModules>
+    <QtInstall>5.14.2_msvc2017</QtInstall>
+    <QtModules>core;gui;widgets;concurrent;network</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|Win32'" Label="QtSettings">
@@ -81,11 +81,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="QJsonAnalyse.cpp" />
     <QtRcc Include="Leventure_DevelopKey.qrc" />
     <QtUic Include="Leventure_DevelopKey.ui" />
     <QtMoc Include="Leventure_DevelopKey.h" />
     <ClCompile Include="Leventure_DevelopKey.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QJsonAnalyse.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
