--- a/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj.filters
+++ b/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj.filters
@@ -40,5 +40,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QJsonAnalyse.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QJsonAnalyse.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
