--- a/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj
+++ b/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.vcxproj
@@ -29,8 +29,8 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|Win32'" Label="QtSettings">
-    <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;gui;widgets</QtModules>
+    <QtInstall>5.12.12_msvc2017</QtInstall>
+    <QtModules>core;gui;widgets;concurrent;network</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|Win32'" Label="QtSettings">
